--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-ng-annotate-loader",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Wrapper around gulp-typescript-angular to use it as a webpack loader.",
   "main": "index.js",
   "scripts": {
@@ -22,9 +22,11 @@
   "license": "MIT",
   "homepage": "https://github.com/kaltsimon/ts-ng-annotate-loader",
   "dependencies": {
-    "@types/node": "^6.0.65",
     "falafel": "^2.0.0",
-    "loader-utils": "^1.1.0",
+    "loader-utils": "^1.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^6.0.65",
     "typescript": "^2.2.1"
   }
 }
